# llm-rag-eval

./: README.md  app.py  pyproject.toml  requirements.txt  smoke_test.py  test_script.py
checks/: models.py
evaluation/: hallucination.py  lexical.py  semantic.py
rag/: inference.py  pipeline.py
testing/: test1.json
ui/: sidebar.py
