[project]
name = "llmeval"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faiss-cpu>=1.8.0",
    "langchain>=0.2.0",
    "langchain-community>=0.2.0",
    "litellm>=1.40.0",
    "nltk>=3.8.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "pdfplumber>=0.11.0",
    "rouge-score>=0.1.2",
    "selfcheckgpt>=0.1.5",
    "sentence-transformers>=3.0.0",
    "spacy>=3.7.0",
    "streamlit>=1.35.0",
    "torch>=2.2.0",
    "transformers>=4.40.0",
]
