[project]
name = "llmeval"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "en-core-web-sm",
    "faiss-cpu>=1.8.0",
    "google-generativeai>=0.8.6",
    "langchain>=0.2.0",
    "langchain-community>=0.2.0",
    "langchain-text-splitters>=1.1.1",
    "litellm[google]>=1.40.0",
    "nltk>=3.8.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "pdfplumber>=0.11.0",
    "rouge-score>=0.1.2",
    "selfcheckgpt>=0.1.5",
    "sentence-transformers>=3.0.0",
    "spacy>=3.7.0",
    "streamlit>=1.35.0",
    "torch>=2.2.0",
    "transformers>=4.40.0",
]

[tool.uv.sources]
en-core-web-sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1-py3-none-any.whl" }
